--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
     "from tensorflow.contrib.distributions import kl, Multinomial\n",
     "from scipy.stats import entropy\n",
     "import tensorflow as tf\n",
-    "import keras as K\n",
+    "from keras import backend as K\n",
     "import numpy as np\n",
     "\n",
     "d = 4\n",
@@ -24,6 +24,20 @@
     "p_ = tf.placeholder(shape=(1,5), dtype='float64', name='target')\n",
     "\n",
     "sentences = [sent_0, sent_1]\n",
+    "\n",
+    "def comU1(vec0, vec1):\n",
+    "    cos_dist = K.sum(vec0 * vec1)/K.sqrt(K.sum(vec0 ** 2))/K.sqrt(K.sum(vec1 ** 2))\n",
+    "    \n",
+    "    print cos_dist.get_shape()\n",
+    "    l2_dist = K.sqrt(K.sum(K.square(vec0 - vec1)))\n",
+    "    print l2_dist.get_shape()\n",
+    "    \n",
+    "    l1_dist = K.sum(K.abs(vec0 - vec1))\n",
+    "    print l1_dist.get_shape()\n",
+    "\n",
+    "    result = tf.pack([cos_dist, l2_dist, l1_dist])\n",
+    "    \n",
+    "    return result\n",
     "\n",
     "def comU2(vec0, vec1):\n",
     "    cos_dist = K.sum(vec0 * vec1)/K.sqrt(K.sum(vec0 ** 2))/K.sqrt(K.sum(vec1 ** 2))\n",
@@ -148,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +181,48 @@
     "        conv = tf.squeeze(conv, axis=[0,1])\n",
     "        convs.append(conv)\n",
     "\n",
-    "    return convs"
+    "    return convs\n",
+    "\n",
+    "def building_block_A(input, ws, d, num_filters):\n",
+    "    conv = convolution2d(input, num_filters, kernel_size=[ws, 2*d], stride=[1,1], padding='VALID')\n",
+    "    return conv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sentence_algo2(atten_embeds, num_filters_A, num_filters_B):\n",
+    "    fea_a, fea_b = [], []\n",
+    "    for i, pooling in enumerate([K.max, K.min, K.mean]):\n",
+    "        atten_embed_0, atten_embed_1 = atten_embeds\n",
+    "\n",
+    "        # Working with building block A, moving the window across the whole length of the word embedding\n",
+    "        for j_0, ws_0 in enumerate(wss):\n",
+    "            oG0A = building_block_A(atten_embed_0, ws_0, d, num_filters_A)\n",
+    "            for j_1, ws_1 in enumerate(wss):\n",
+    "                oG1A = building_block_A(atten_embed_1, ws_1, d, num_filters_A)\n",
+    "                fea_a.append(comU1(oG0A, oG1A))\n",
+    "\n",
+    "        # Working with building block B, the per dimensional CNN\n",
+    "        for b, ws in enumerate(wss):\n",
+    "            oG0B = building_block_B(atten_embed_0, ws, num_filters_B)\n",
+    "            oG0B = [pooling(conv,0) for conv in oG0B]\n",
+    "\n",
+    "            oG1B = building_block_B(atten_embed_1, ws, num_filters_B)\n",
+    "            oG1B = [pooling(conv,0) for conv in oG1B]\n",
+    "\n",
+    "            for n in xrange(num_filters_B):\n",
+    "                fea_b.append(comU1(oG0B[n], oG0B[n]))\n",
+    "\n",
+    "    fea_a = K.expand_dims(K.flatten(fea_a),0)\n",
+    "    fea_b = K.expand_dims(K.flatten(fea_b),0)\n",
+    "    \n",
+    "    return fea_a, fea_b"
    ]
   },
   {
@@ -183,31 +238,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<tf.Tensor 'Mean_22:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_23:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_24:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_25:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_26:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_27:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_28:0' shape=(10,) dtype=float64>,\n",
-       " <tf.Tensor 'Mean_29:0' shape=(10,) dtype=float64>]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()\n",
+      "()"
+     ]
     }
    ],
    "source": [
-    "[K.mean(conv,0) for conv in temp]"
+    "fea_a, fea_b = sentence_algo2(atten_embeds, 10, 15)"
    ]
   },
   {
