--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -27,13 +27,8 @@
     "\n",
     "def comU1(vec0, vec1):\n",
     "    cos_dist = K.sum(vec0 * vec1)/K.sqrt(K.sum(vec0 ** 2))/K.sqrt(K.sum(vec1 ** 2))\n",
-    "    \n",
-    "    print cos_dist.get_shape()\n",
     "    l2_dist = K.sqrt(K.sum(K.square(vec0 - vec1)))\n",
-    "    print l2_dist.get_shape()\n",
-    "    \n",
     "    l1_dist = K.sum(K.abs(vec0 - vec1))\n",
-    "    print l1_dist.get_shape()\n",
     "\n",
     "    result = tf.pack([cos_dist, l2_dist, l1_dist])\n",
     "    \n",
@@ -190,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -211,13 +206,13 @@
     "        # Working with building block B, the per dimensional CNN\n",
     "        for b, ws in enumerate(wss):\n",
     "            oG0B = building_block_B(atten_embed_0, ws, num_filters_B)\n",
-    "            oG0B = [pooling(conv,0) for conv in oG0B]\n",
+    "            oG0B = tf.pack([pooling(conv,0) for conv in oG0B])\n",
     "\n",
     "            oG1B = building_block_B(atten_embed_1, ws, num_filters_B)\n",
-    "            oG1B = [pooling(conv,0) for conv in oG1B]\n",
-    "\n",
+    "            oG1B = tf.pack([pooling(conv,0) for conv in oG1B])\n",
+    "            \n",
     "            for n in xrange(num_filters_B):\n",
-    "                fea_b.append(comU1(oG0B[n], oG0B[n]))\n",
+    "                fea_b.append(comU1(oG0B[:,n], oG1B[:,n]))\n",
     "\n",
     "    fea_a = K.expand_dims(K.flatten(fea_a),0)\n",
     "    fea_b = K.expand_dims(K.flatten(fea_b),0)\n",
@@ -238,51 +233,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()\n",
-      "()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fea_a, fea_b = sentence_algo2(atten_embeds, 10, 15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'ExpandDims_509:0' shape=(1, 405) dtype=float64>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fea_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "n_hidden = 5 \n",
-    "p = fully_connected(fully_connected(fea_A, n_hidden, activation_fn=tf.nn.tanh), 5, activation_fn=tf.nn.log_softmax)\n",
+    "p = fully_connected(fully_connected(fea_A, n_hidden, activation_fn=K.tanh), 5, activation_fn=tf.nn.log_softmax)\n",
     "# p_ = sparse_target_distribution(y)\n",
     "\n",
     "cross_entropy = -tf.reduce_sum(p_ * tf.log(p))\n",
